<resources>
    <string name="app_name">Recipe</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_set_user">SetUser</string>
    <string name="welcome_message">
        <![CDATA[Before we get started
        we want to get to know you better.]]>
    </string>
    <string name="cuisine_chose_msg">
        <![CDATA[Tell us what kind of
        do you like to cook.]]>
    </string>
    <string name="my_area">My Area</string>
    <string name="title_activity_my_area">MyArea</string>
    <string name="recipe_category_msg">Please chose category:</string>
    <string name="add_recipe_ingredients">Ingredients:</string>
    <string name="add_recipe_direction_title">Directions:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_recipe_page">RecipePage</string>
    <string name="action_settings">Settings</string>
    <string name="select_image">Select Image</string>
    <string name="ingredients_title">Ingredients:</string>
    <string name="instructions_title">Instructions:</string>
    <string name="home">Home Page</string>
    <string name="comment_message">Share your thoughts...</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="free_search_header">What are you in the mood for?</string>
    <string name="by_cuisine_search_header">Filte by cuisine type:</string>
    <string name="Search">Button</string>
    <string name="italian">Italian</string>
    <string name="meat">Meat</string>
    <string name="baking">Baking</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="_continue">continue</string>
    <string name="by_cuisine_dish_type">Filter by dish type:</string>
    <string name="appetizer">Appetizer</string>
    <string name="asian">Asian</string>
    <string name="european">European</string>
    <string name="middle_eastern_new_line">
        <![CDATA[Middle
        Eastern]]></string>
    <string name="continue_button_text">Continue</string>
    <string name="dessert">Dessert</string>
    <string name="filter_by_skills">Filter by skills:</string>
    <string name="search_button">Search</string>
    <string name="dish_name">Dish Name</string>
    <string name="product">Product</string>
    <string name="recipe_type">Recipe Type:</string>
    <string name="soup">Soup</string>
    <string name="main">Main</string>
    <string name="salad">Salad</string>
    <string name="recipe_skill">Skill Level:</string>
    <string name="begginer">Begginer</string>
    <string name="intermediate">Intermediate</string>
    <string name="pro">Pro</string>
    <string name="descriptions">Descriptions</string>
    <string name="enter_email">Enter email</string>
    <string name="reset">Reset</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot?</string>
    <string name="my_recipes">My Recipes:</string>
    <string name="conffirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_log_in">Already a user? Log in!</string>
    <string name="youre_settings">Youre Settings:</string>
    <string name="skills_header">Skills:</string>
    <string name="favorite_cuisines">Favorite Cuisines:</string>
    <string name="country_header">Country:</string>
    <string name="password_header">Password:</string>
    <string name="confirm_header">Confirm:</string>
    <string name="last_name_header">Last Name:</string>
    <string name="first_name_header">First Name:</string>
    <string name="burn_an_omelette">Burn an omelette</string>
    <string name="know_my_shit">Know my shit</string>
    <string name="professional_chef">Professional Chef!</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="welcom">Welcom!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="my_cooking_skills">My cooking skills</string>
</resources>
