<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyArea">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/free_text_header"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/free_search_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <SearchView
        android:id="@+id/free_text_search"
        android:layout_width="394dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:queryHint="hi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_text_header">

    </SearchView>

    <TextView
        android:id="@+id/free_text_header2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/by_cuisine_search_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_text_search" />

    <RadioGroup
        android:id="@+id/cuisine_radio_group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_text_header2"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/asian_b"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/asian" />

        <RadioButton
            android:id="@+id/middle_b"
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:text="@string/middle_eastern_new_line" />

        <RadioButton
            android:id="@+id/european_b"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/european" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/cuisine_radio_group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuisine_radio_group1"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/italian_b"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/italian" />

        <RadioButton
            android:id="@+id/meat_b"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/meat" />

        <RadioButton
            android:id="@+id/baking_b"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/baking" />

    </RadioGroup>

    <TextView
        android:id="@+id/free_text_header3"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/by_cuisine_dish_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuisine_radio_group2" />

    <TextView
        android:id="@+id/skill_level_header"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/filter_by_skills"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_radio_group2" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="147dp"
        android:layout_height="59dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="103dp"
        android:background="#E91E63"
        android:text="@string/search_button"
        android:textColor="#56FEFEFE"
        android:textColorLink="#E91E63"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_skills" />

    <RadioGroup
        android:id="@+id/type_radio_group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_text_header3">

        <RadioButton
            android:id="@+id/checkBoxSoup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/soup" />

        <RadioButton
            android:id="@+id/checkBoxAppetizer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/appetizer" />

        <RadioButton
            android:id="@+id/checkBoxMain"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/main" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/type_radio_group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_radio_group1">

        <RadioButton
            android:id="@+id/checkBoxDessert"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dessert" />

        <RadioButton
            android:id="@+id/checkBoxSalad"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/salad" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_skills"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_level_header"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/check_beginner"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:text="@string/begginer"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/check_inter"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:text="@string/intermediate"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/check_pro"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:text="@string/pro"
            android:textSize="12sp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>