<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">


            <EditText
                android:id="@+id/settings_confirm"
                android:layout_width="319dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/settings_password"
                android:layout_width="314dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/settings_country2"
                android:layout_width="322dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/settings_name_first"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/settings_name_last"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="160dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/youre_settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="45dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/skills_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="112dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/favorite_cuisines"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_radio_group_skills" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="56dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/country_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_meat_rec_category" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="65dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/password_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="56dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/confirm_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/last_name_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/first_name_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <RadioGroup
                android:id="@+id/settings_radio_group_skills"
                android:layout_width="210dp"
                android:layout_height="85dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/settings_begginer_radio_set_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/burn_an_omelette" />

                <RadioButton
                    android:id="@+id/settings_intermediate_set_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/know_my_shit" />

                <RadioButton
                    android:id="@+id/settings_experienced_set_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/professional_chef" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/settings_asian_rec_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:text="@string/asian"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <CheckBox
                android:id="@+id/settings_middle_eastern_rec_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:text="@string/middle_eastern_new_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_asian_rec_category" />

            <CheckBox
                android:id="@+id/settings_european_rec_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="8dp"
                android:text="@string/european"
                app:layout_constraintStart_toStartOf="@+id/settings_asian_rec_category"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <CheckBox
                android:id="@+id/settings_italian_rec_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="8dp"
                android:text="@string/italian"
                app:layout_constraintStart_toStartOf="@+id/settings_middle_eastern_rec_category"
                app:layout_constraintTop_toBottomOf="@+id/settings_european_rec_categories" />

            <CheckBox
                android:id="@+id/settings_meat_rec_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:text="@string/meat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_middle_eastern_rec_category" />

            <CheckBox
                android:id="@+id/settings_baking_rec_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="8dp"
                android:text="@string/baking"
                app:layout_constraintStart_toStartOf="@+id/settings_meat_rec_category"
                app:layout_constraintTop_toBottomOf="@+id/settings_italian_rec_category" />

            <Button
                android:id="@+id/settings_button_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/change"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</LinearLayout>